test/cases/compile_errors/stage1/obj/src_outside_function.zig
comptime {
    @src();
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:5: error: @src outside function
